--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,8 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/geometry2.png');
+    /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
 
@@ -26,12 +27,17 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 95%;
+    min-width: 300px;
+    max-width: 600px;
+    margin: auto;
 }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
 }
+
 
 /*
  * Styles for the deck of cards
@@ -80,6 +86,7 @@ h1 {
     background: #02ccba;
     font-size: 33px;
 }
+
 
 /*
  * Styles for the Score Panel
