--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,11 @@ body {
     margin: auto;
 }
 
+header {
+    width: 100%;
+    text-align: center;
+}
+
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
