--- a/css/app.css
+++ b/css/app.css
@@ -41,6 +41,8 @@ header {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+    margin: 10px auto 10px;
+    font-size: 2.6em;
 }
 
 
