--- a/css/app.css
+++ b/css/app.css
@@ -65,8 +65,11 @@ h1 {
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
+    width: calc((100% - 30px)/4);
+    min-width: 50px;
+    min-height: calc((100% - 30px)/4);
+    /* min-height: 50px; */
+    /* margin: 2% 2%; */
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
