style the .match class

--- a/css/app.css
+++ b/css/app.css
@@ -97,8 +97,12 @@ h1 {
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: #f8801e;
     font-size: 33px;
+    animation-name: tada;
+    -webkit-backface-visibility: visible !important;
+    backface-visibility: visible !important;
+    animation-duration: .75s;
 }
 
 
