style the score panel

--- a/css/app.css
+++ b/css/app.css
@@ -105,6 +105,10 @@ h1 {
     animation-duration: .75s;
 }
 
+.card .fa {
+    font-size: 50%;
+}
+
 
 /*
  * Styles for the Score Panel
@@ -112,8 +116,10 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 100%;
     margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .score-panel .stars {
