--- a/css/app.css
+++ b/css/app.css
@@ -127,6 +127,8 @@ h1 {
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
+    width: 100%;
+    text-align: center;
 }
 
 .score-panel .stars li {
