--- a/css/app.css
+++ b/css/app.css
@@ -131,12 +131,18 @@ h1 {
     text-align: center;
 }
 
-.score-panel .stars li {
+.score-panel .stars li,
+#starRating .stars {
     list-style: none;
     display: inline-block;
+    color: yellow;
+    font-size: 2em;
 }
 
 .score-panel .restart {
-    float: right;
+    /* float: right; */
     cursor: pointer;
+    font-size: 1.5em;
+    width: 20%;
+    text-align: center;
 }
