--- a/css/app.css
+++ b/css/app.css
@@ -160,3 +160,95 @@ h1 {
     width: 40%;
     text-align: center;
 }
+
+
+/*
+ * Styles for congratulations modal
+ */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 50px auto;
+    padding: 20px;
+    background: #f7edc2;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 85%;
+    max-width: 350px;
+    position: relative;
+    transition: all 5s ease-in-out;
+    font-family: 'Gloria Hallelujah', cursive;
+}
+
+.popup h2 {
+    margin-top: 20px;
+    color: rgb(30, 81, 252);
+    font-family: Tahoma, Arial, sans-serif;
+    text-align: center;
+    font-size: 1.5em;
+    width: 100%;
+}
+
+.popup p {
+    font-size: 1.5em;
+}
+
+.popup .close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+}
+
+.popup .close:hover {
+    color: #E5F720;
+}
+
+.popup .content-1,
+.content-2 {
+    max-height: 30%;
+    overflow: auto;
+    text-align: center;
+    width: 100%;
+}
+
+.show {
+    visibility: visible !important;
+    opacity: 100 !important;
+}
+
+#starRating li {
+    display: inline-block;
+}
+
+#play-again {
+    background-color: #a7bad0;
+    font-size: 1.8em;
+    display: block;
+    width: 100%;
+    margin: 0 15%;
+    font-family: 'Gloria Hallelujah', cursive;
+    color: #ffffff;
+    border-radius: 5px;
+}
