--- a/css/app.css
+++ b/css/app.css
@@ -120,6 +120,7 @@ h1 {
     margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
+    /* font-size: 2.5em; */
 }
 
 .score-panel .stars {
